--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,5 +1,11 @@
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Times New Roman', sans-serif;
+}
+
+.navbar {
+  margin-top: 0 !important;
 }
 
 /* Sidebar */
