--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -140,6 +140,14 @@ body {
     border: none;
 }
 
+.btn-tambahkeluarga{
+    border-radius: 5px;
+    padding: 3px 9px;
+    background-color: #00d800;
+    border: none;
+    font-size:smaller;
+}
+
 .cari{
     background-color: #e65c00;
     border: none;        
