menyesuaikan menu admin sedikit

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -51,6 +51,13 @@ nav.d-flex {
     font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
+
+    /* tambahan biar rata & sama tinggi */
+    min-height: 120px;            /* atur sesuai kebutuhan */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;      /* rata tengah vertikal */
+    align-items: center;          /* rata tengah horizontal */
 }
 .info-card:hover {
     background-color: #fff4ec;
